<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="pilih_komoditas">Pilih Komoditas</string>
    <string name="select_premium">AKSES PREMIUM</string>
    <string name="onboarding_title">Get Forecast Information &amp; <br/> Total Harvest Prediction</string>
    <string name="onboarding_caption">Forecast information including monthly average temperature, humidity, rainfall, and sunshine. Then, get the total harvest prediction by just inputing your crop area! Get the full access to customize all of the input for our prediction model by becoming premium member.</string>
    <string name="title">Smart Price Rice Control</string>
    <string name="input1_hint">Suhu Rata - Rata Bulan Tanam</string>
    <string name="input1_size">Celsius</string>
    <string name="input2_size">Celsius</string>
    <string name="input2_hint">Suhu Rata - Rata Bulan 2</string>
    <string name="provinsi">Provinsi Jawa Timur</string>
    <string name="komoditas">Komoditas Beras</string>
    <string name="input3_hint">Suhu Rata - Rata Bulan 3</string>
    <string name="input3_size">Celsius</string>
    <string name="input4_hint">Suhu Rata - Rata Bulan Panen</string>
    <string name="input4_size">Celsius</string>
    <string name="input5_hint">Kelembapan Rata - Rata Bulan Tanam</string>
    <string name="input5_size">RH</string>
    <string name="input6_size">RH</string>
    <string name="input6_hint">Kelembapan Rata - Rata Bulan 2</string>
    <string name="input7_size">RH</string>
    <string name="input7_hint">Kelembapan Rata - Rata Bulan 3</string>
    <string name="input8_hint">Kelembapan Rata - Rata Bulan Panen</string>
    <string name="input8_size">RH</string>
    <string name="input9_size">mm</string>
    <string name="input9_hint">Curah Hujan Rata - Rata Bulan Tanam</string>
    <string name="input10_hint">Curah Hujan Rata - Rata Bulan 2</string>
    <string name="input10_size">mm</string>
    <string name="input11_size">mm</string>
    <string name="input11_hint">Curah Hujan Rata - Rata Bulan 3</string>
    <string name="input12_hint">Curah Hujan Rata - Rata Bulan Panen</string>
    <string name="input12_size">mm</string>
    <string name="input13_hint">Lama Penyinaran Rata - Rata Bulan Tanam</string>
    <string name="input13_size">Jam</string>
    <string name="input14_hint">Lama Penyinaran Rata - Rata Bulan 2</string>
    <string name="input14_size">Jam</string>
    <string name="input15_hint">Lama Penyinaran Rata - Rata Bulan 3</string>
    <string name="input15_size">Jam</string>
    <string name="input16_hint">Lama Penyinaran Rata - Rata Bulan Panen</string>
    <string name="input16_size">Jam</string>
    <string name="input17_hint">Luas Lahan Yang Digunakan</string>
    <string name="input17_size">Ha</string>
    <string name="hitung">HITUNG</string>
    <string name="text_prediction">Prediksi Hasil Panen</string>
    <string name="total_res">0</string>
    <string name="total_res_size">TON</string>
    <string name="text_team">Our Team</string>
    <string name="team_code">[B21 - CAP0364]</string>
    <string name="team_janah">Siti Nurjanah (A2472334)</string>
    <string name="team_yuma">Yuma Anugrah Virya Gunawan (A0141364)</string>
    <string name="team_desti">Destiana Nur Fitriani (C2472330)</string>
    <string name="team_angga">Anggara Permana Putra (C2152099)</string>
    <string name="team_rozin">Fauzan Rozin (M0020079)</string>
    <string name="team_dian">Erdian Syaefullah Fatah (M2472312)</string>
    <string name="select_free">COBA GRATIS</string>
    <string name="text_prov">Jawa Timur</string>
    <string name="text_kom">Beras</string>
    <string name="select">PILIH</string>
</resources>