<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prediction_res.ResultActivity"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_dg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/view_dg"
            app:layout_constraintTop_toTopOf="@+id/view_dg"
            app:layout_constraintBottom_toBottomOf="@id/view_dg"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/view_dg"
            app:layout_constraintBottom_toBottomOf="@id/view_dg"
            app:layout_constraintEnd_toEndOf="@id/view_dg"/>

        <TextView
            android:id="@+id/text_pred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_prediction"
            android:textSize="22sp"
            android:fontFamily="@font/oswald_reg"
            android:textColor="@color/dark_green"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_dg"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_pred">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_res"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textAlignment="center"
                    android:text="@string/total_res"
                    android:fontFamily="@font/robc_reg"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="@string/total_res_size"
                    android:fontFamily="@font/robc_reg"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>