<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <View
            android:id="@+id/view_dg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/view_dg"
            app:layout_constraintTop_toTopOf="@+id/view_dg"
            app:layout_constraintBottom_toBottomOf="@+id/view_dg"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/btn_swap"
            app:layout_constraintTop_toTopOf="@+id/view_dg"
            app:layout_constraintBottom_toBottomOf="@+id/view_dg"/>

        <TextView
            android:id="@+id/provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textSize="18sp"
            android:textColor="@color/light_green"
            android:fontFamily="@font/oswald_med"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintBottom_toTopOf="@+id/komoditas"/>

        <TextView
            android:id="@+id/komoditas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/komoditas"
            android:textSize="18sp"
            android:textColor="@color/light_green"
            android:fontFamily="@font/oswald_med"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/provinsi"
            app:layout_constraintBottom_toBottomOf="@+id/logo"/>


        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/view_dg"
            app:layout_constraintTop_toTopOf="@+id/view_dg"
            app:layout_constraintBottom_toBottomOf="@+id/view_dg"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_bulan"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dark_green"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/view_dg"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Bulan : Mei 2021"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/oswald_reg"
            android:translationZ="5dp"
            app:layout_constraintTop_toTopOf="@id/layout_bulan"
            app:layout_constraintBottom_toBottomOf="@id/layout_bulan"
            app:layout_constraintStart_toStartOf="@id/layout_bulan"
            app:layout_constraintEnd_toEndOf="@id/layout_bulan"/>

        <TextView
            android:id="@+id/text_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="Prediksi Suhu Periode Tanam - Panen"
            android:fontFamily="@font/oswald_reg"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/layout_bulan"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rv1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_suhu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/rv_item"
                tools:itemCount="4"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="Prediksi Kelembapan Periode Tanam - Panen"
            android:fontFamily="@font/oswald_reg"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/card_rv1"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rv2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_kelembapan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/rv_item"
                tools:itemCount="4"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="Prediksi Curah Hujan Periode Tanam - Panen"
            android:fontFamily="@font/oswald_reg"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/card_rv2"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rv3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_title3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_curah"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/rv_item"
                tools:itemCount="4"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="Prediksi Lama Penyinaran Periode Tanam - Panen"
            android:fontFamily="@font/oswald_reg"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/card_rv3"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rv4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_title4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sinar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/rv_item"
                tools:itemCount="4"/>

        </com.google.android.material.card.MaterialCardView>


        <!-- input14 -->
        <TextView
            android:id="@+id/input14_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/input17_hint"
            style="@style/input_cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_rv4"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input14_layout"
            style="@style/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input14_cap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input14"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input17_size"
            style="@style/input_size"
            app:layout_constraintStart_toEndOf="@+id/input14_layout"
            app:layout_constraintTop_toTopOf="@+id/input14_layout"
            app:layout_constraintBottom_toBottomOf="@id/input14_layout"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calc"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/hitung"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_reg"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            app:backgroundTint="@color/dark_green"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input14_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>